--- a/compose.yaml
+++ b/compose.yaml
@@ -1,17 +1,17 @@
 services:
   db:
     image: postgres:16.1
-    container_name: postgres
+    container_name: shareit
     ports:
-      - "5432:5432"
+      - "5438:5432"
     volumes:
-      - ./src/main/resources/schema.sql:/docker-entrypoint-initdb.d/schema.sql
+      - ./volumes/shareit:/var/lib/shareit/data/
     environment:
       - POSTGRES_DB=shareit
       - POSTGRES_USER=dbuser
       - POSTGRES_PASSWORD=12345
     healthcheck:
       test: pg_isready -q -d $$POSTGRES_DB -U $$POSTGRES_USER
-      timeout: 5s
-      interval: 5s
+      timeout: 20s
+      interval: 20s
       retries: 10
